[gd_scene load_steps=3 format=3 uid="uid://c9r9r9r9r9r9r"]

[ext_resource type="Script" path="res://scripts/states/geoscape_state.gd" id="1"]

[node name="Geoscape" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "GEOSCAPE"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="WorldMapArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -250.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.1, 1)

[node name="WorldMapLabel" type="Label" parent="WorldMapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "WORLD MAP"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="SidePanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = -10.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="TimeControls" type="HBoxContainer" parent="SidePanel"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="SidePanel/TimeControls"]
layout_mode = 2
text = "||"

[node name="PlayButton" type="Button" parent="SidePanel/TimeControls"]
layout_mode = 2
text = ">"

[node name="FastForwardButton" type="Button" parent="SidePanel/TimeControls"]
layout_mode = 2
text = ">>"

[node name="TimeLabel" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Day: 1"
horizontal_alignment = 1

[node name="FundingLabel" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Funding: $1,000,000"
horizontal_alignment = 1

[node name="MissionsLabel" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Active Missions: 0"
horizontal_alignment = 1

[node name="ActionsContainer" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2

[node name="BaseButton" type="Button" parent="SidePanel/ActionsContainer"]
layout_mode = 2
text = "MANAGE BASES"

[node name="ResearchButton" type="Button" parent="SidePanel/ActionsContainer"]
layout_mode = 2
text = "RESEARCH"

[node name="ManufactureButton" type="Button" parent="SidePanel/ActionsContainer"]
layout_mode = 2
text = "MANUFACTURE"

[node name="MissionsPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -300.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="MissionsLabel" type="Label" parent="MissionsPanel"]
layout_mode = 2
text = "MISSIONS"
horizontal_alignment = 1

[node name="MissionsList" type="VBoxContainer" parent="MissionsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="NoMissionsLabel" type="Label" parent="MissionsPanel/MissionsList"]
layout_mode = 2
text = "No active missions"
horizontal_alignment = 1

[node name="TestButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AdvanceMonthButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "ADVANCE MONTH"

[node name="SpawnMissionButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "SPAWN TEST MISSION"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "BACK TO MENU"
